--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           git checkout master
           git merge origin/develop --ff-only
-          git push https://x-access-token:${TOKEN}@github.com/Compy-testing/AMDMIGraphX.git HEAD:master
+          git push https://x-access-token:${{ secrets.TEST_TOKEN }}@github.com/Compy-testing/AMDMIGraphX.git HEAD:master
